<resources>
    <string name="app_name">دانلود وضعیت واتساپ</string>
    <string name="version">نسخه : 1.0</string>

    <!--SplashActivity-->
    <string name="storage_permission_request">درخواست مجوز حافظه</string>
    <string name="need_access_storage">این برنامه برای مشاهده وذخیره وضعیت های واتساپ نیاز به مجوز حافظه دارد</string>
    <string name="accept">موافقم</string>
    <string name="exit">خروج</string>

    <!--MainActivity-->
    <string name="guide">راهنما استفاده</string>
    <string name="whatsapp_status">واتساپ</string>
    <string name="business_status">واتساپ تجاری</string>
    <string name="downloads">دانلود ها</string>
    <string name="guide_text">1 - از منو بالا سمت چپ وارد برنامه واتساپ شوید
        \n2 - وضعیت های موردنظر را ببینید
        \n3 - سپس به برنامه برگردید
        \n4 - حالا با لمس دکمه دانلود میتوانید وضعیت های مورد نظر خود را ذخیره کنید
</string>
    <string name="share_app">ارسال برنامه به دوستان</string>
    <string name="other_apps">سایر برنامه ها</string>
    <string name="about_us">درباره ما</string>
    <string name="comment">ثبت نظر</string>


    <!--MyIntent-->
    <string name="app_link_download">لینک برنامه&#160;</string>
    <string name="share_app_with">اشتراک گذاری با</string>
    <string name="email_address">arashaltafi1377@gmail.com</string>
    <string name="send_email">ارسال ایمیل</string>
    <string name="whatsapp_is_not_installed">واتساپ روی تلفن شما نصب نیست</string>
    <string name="whatsapp_business_is_not_installed">واتساپ تجاری روی تلفن شما نصب نیست</string>
    <string name="unknown_error">خطای ناشناخته</string>

    <string name="developer_applications_link_bazaar">https://cafebazaar.ir/developer/arashaltafi</string>
    <string name="market_app_id_bazaar">http://cafebazaar.ir/app/?id=</string>
    <string name="comment_market_link_bazaar">bazaar://details?id=</string>
    <string name="please_register_your_comment_bazaar">ممنون از نظر شما\nلطفا نظر خود را در کافه بازار ثبت کنید</string>
    <string name="developer_applications_link">https://myket.ir/developer/arashaltafi</string>
    <string name="market_app_id">https://myket.ir/app/</string>
    <string name="comment_market_link">myket://comment?id=</string>
    <string name="need_install_market">برای ثبت نظر باید اپلیکیشن مایکت را نصب داشته باشید</string>
    <string name="need_install_caffe_bazaar">برای ثبت نظر باید اپلیکیشن کافه بازار را نصب داشته باشید</string>
    <string name="please_register_your_comment">ممنون از نظر شما\nلطفا نظر خود را در مایکت ثبت کنید</string>
    <string name="please_register_your_comment_caffe_bazaar">ممنون از نظر شما\nلطفا نظر خود را در کافه بازار ثبت کنید</string>

    <!--StatusFragment-->
    <string name="directory_not_exist">پوشه مورد نظر وجود ندارد</string>
    <string name="no_w_status_was_observed">شما هنوز در واتساپ وضعیتی را تماشا نکرده اید.لطفا روی علامت سوال پایین صفحه کلیک کنید و طبق آموزش وضعیت ها رو دانلود کنید</string>
    <string name="no_wb_status_was_observed">شما هنوز در واتساپ تجاری وضعیتی را تماشا نکرده اید.لطفا روی علامت سوال پایین صفحه کلیک کنید و طبق آموزش وضعیت ها رو دانلود کنید</string>
    <string name="no_status_saved">هیچ وضعیتی ذخیره نشده است\nلطفا روی علامت سوال پایین صفحه کلیک کنید و طبق آموزش وضعیت ها رو دانلود کنید</string>
    <string name="open_whatsapp">باز کردن واتساپ</string>
    <string name="open_business_whatsapp">باز کردن واتساپ تجاری</string>


    <!--ShowMediaFragment-->
    <string name="save">ذخیره</string>
    <string name="share">ارسال</string>
    <string name="delete">حذف</string>
    <string name="preview">پیش نمایش</string>


    <!--adapter-->
    <string name="already_saved">قبلا ذخیره شده است</string>
    <string name="saved_successfully">با موفقیت ذخیره شد</string>
    <string name="delete_status">حذف پست</string>
    <string name="do_you_want_to_delete">آیا میخواهید این پست را حذف کنید؟</string>


    <!--dialog_about_us-->
    <string name="version_code"><b>نسخه</b> : 1.0.0</string>
    <string name="developer"><b>توسعه دهنده </b> : آرش الطافی</string>
    <string name="support_email"><b>ایمیل پشتیبانی </b>:</string>


    <!--dialog_comment-->
    <string name="how_main_point">چه امتیازی به این برنامه می دهید؟</string>
    <string name="close">بستن</string>
    <string name="please_send_email">ممنون از نظر شما\nلطفا انتقادات و پیشنهادات خود را از طریق ایمیل برای ماارسال کنید </string>
    <string name="number_5">5</string>
    <string name="number_4">4</string>
    <string name="number_3">3</string>
    <string name="number_2">2</string>
    <string name="number_1">1</string>
    <string name="submitt_comment">لطفا امتیاز خود را مشخص کنید</string>
    <string name="deleted_successfully">با موفقیت حذف شد</string>


    <!--dialog-exit-->
    <string name="do_you_want_to_exit">آیا مایل به خروج هستید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
</resources>