<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="22dp"
    android:layoutDirection="ltr">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="14dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvComment"
                style="@style/tv_title_dialog_style"
                android:text="@string/comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivClose"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_horizontal_divider"
                style="@style/view_divider_menu_style"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tvComment" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRating"
                style="@style/tv_dialog_style"
                android:layout_width="match_parent"
                android:text="@string/how_main_point"
                app:layout_constraintTop_toBottomOf="@id/view_horizontal_divider" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layoutDirection="rtl"
                android:numStars="5"
                android:stepSize="1"
                android:theme="@style/rating_bar_style"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRating" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/clPoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/ratingBar"
                app:layout_constraintEnd_toEndOf="@id/ratingBar"
                app:layout_constraintStart_toStartOf="@id/ratingBar"
                app:layout_constraintTop_toBottomOf="@id/ratingBar">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/tv_point_style"
                    android:text="@string/number_1" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/tv_point_style"
                    android:text="@string/number_2" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/tv_point_style"
                    android:text="@string/number_3" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/tv_point_style"
                    android:text="@string/number_4" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/tv_point_style"
                    android:text="@string/number_5" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCommentCaffeBazaar"
                style="@style/tv_dialog_style"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:lineSpacingExtra="18dp"
                android:paddingHorizontal="18dp"
                android:text="@string/please_register_your_comment_caffe_bazaar"
                android:textColor="@color/dark_green"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clPoint"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnComment"
                style="@style/btn_dialog_style"
                android:alpha="0.5"
                android:text="@string/comment"
                android:textColor="@color/white"
                app:backgroundTint="@color/dark_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCommentCaffeBazaar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

