<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="14dp"
    android:layoutDirection="ltr">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="14dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvExit"
                style="@style/tv_title_dialog_style"
                android:text="@string/do_you_want_to_exit"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOtherApp"
                style="@style/btn_dialog_style"
                android:text="@string/other_apps"
                app:backgroundTint="@color/blue"
                app:layout_constraintBottom_toTopOf="@id/btnClose"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvExit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClose"
                style="@style/btn_dialog_style"
                android:layout_marginEnd="8dp"
                android:text="@string/close"
                app:backgroundTint="@color/dark_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnExit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnOtherApp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExit"
                style="@style/btn_dialog_style"
                android:layout_marginStart="8dp"
                android:text="@string/exit"
                app:backgroundTint="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnClose" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>