<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:layoutDirection="ltr">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="18dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivClose"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAboutUs"
                style="@style/tv_title_dialog_style"
                android:text="@string/about_us"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivIcon"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_margin="18dp"
                android:src="@drawable/ic_whatsapp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_horizontal_divider" />

            <View
                android:id="@+id/view_horizontal_divider"
                style="@style/view_divider_menu_style"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tvAboutUs" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCalculatorName"
                style="@style/tv_dialog_style"
                android:layout_width="match_parent"
                android:text="@string/app_name"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/ivIcon" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivVersion"
                style="@style/iv_dialog_style"
                android:src="@drawable/ic_version"
                app:layout_constraintBottom_toBottomOf="@id/tvVersion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvVersion" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvVersion"
                style="@style/tv_dialog_style"
                android:layout_marginTop="38dp"
                android:text="@string/version_code"
                app:layout_constraintEnd_toStartOf="@id/ivVersion"
                app:layout_constraintTop_toBottomOf="@id/tvCalculatorName" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivDeveloper"
                style="@style/iv_dialog_style"
                android:src="@drawable/ic_developer"
                app:layout_constraintBottom_toBottomOf="@id/tvDeveloper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvDeveloper" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDeveloper"
                style="@style/tv_dialog_style"
                android:text="@string/developer"
                app:layout_constraintEnd_toStartOf="@id/ivDeveloper"
                app:layout_constraintTop_toBottomOf="@id/tvVersion" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivEmail"
                style="@style/iv_dialog_style"
                android:src="@drawable/ic_email"
                app:layout_constraintBottom_toBottomOf="@id/tvSupportEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvSupportEmail" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSupportEmail"
                style="@style/tv_dialog_style"
                android:text="@string/support_email"
                app:layout_constraintEnd_toStartOf="@+id/ivEmail"
                app:layout_constraintTop_toBottomOf="@id/tvDeveloper" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/tv_dialog_style"
                android:layout_marginStart="18dp"
                android:text="@string/email_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSupportEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>