<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="ltr">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivBack"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_margin="8dp"
                android:layoutDirection="rtl"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/preview"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <com.jsibbold.zoomage.ZoomageView
        android:id="@+id/zvPreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="2dp"
        android:src="@drawable/ic_sample_status"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:zoomage_animateOnReset="true"
        app:zoomage_autoCenter="true"
        app:zoomage_autoResetMode="UNDER"
        app:zoomage_maxScale="10"
        app:zoomage_minScale="0.4"
        app:zoomage_restrictBounds="false"
        app:zoomage_translatable="true"
        app:zoomage_zoomable="true" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="2dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/btn_media_action_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/save"
        app:drawableLeftCompat="@drawable/ic_download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnShare" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShare"
        style="@style/btn_media_action_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/blue"
        android:text="@string/share"
        app:drawableLeftCompat="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintStart_toEndOf="@id/btnDelete" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDelete"
        style="@style/btn_media_action_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete"
        app:drawableLeftCompat="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnShare"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>